# davis-interactive

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  404.html  CITATION  CNAME  LICENSE  MANIFEST.in  README.md  index.html  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
challenge/: index.html
davis-interactive/metrics/: jaccard.py
davis-interactive/robot/: interactive_robot.py  interactive_robot_test.py
davisinteractive/: __init__.py  common.py  logging.py  logging_test.py
davisinteractive/client/: __init__.py  session.py
davisinteractive/connector/: abstract.py  fabric.py  local.py  remote.py
davisinteractive/dataset/: __init__.py  davis.json  davis.py  davis_test.py
davisinteractive/evaluation/: __init__.py  service.py  service_test.py
davisinteractive/metrics/: __init__.py  jaccard.py  jaccard_test.py
davisinteractive/models/: pixelwise_metric_learning.py
davisinteractive/robot/: __init__.py  interactive_robot.py  interactive_robot_test.py
davisinteractive/session/: __init__.py  session.py  session_test.py
davisinteractive/storage/: __init__.py  abstract.py  local.py  local_test.py
davisinteractive/utils/: __init__.py  mask.py  mask_test.py  masks.py  masks_test.py  operations.py  scribbles.py  scribbles_test.py  visualization.py  visualization_test.py
docs/: README.md  build_docs.sh  mkdocs.yml  pydocmd.yml
docs/dataset.davis/: index.html
docs/evaluation.service/: index.html
docs/metrics.jaccard/: index.html
docs/pages/: challenge.md
docs/robot/: index.html
docs/session/: index.html
docs/utils.mask/: index.html
docs/utils.operations/: index.html
examples/: example_session.ipynb  generate_dataset_file.ipynb  robot_explanation.ipynb
license/: index.html
scripts/: build_documentation.sh  deploy_documentation.sh  deploy_pypi.sh
search/: search_index.json
(+15 files in other folders)
