[metadata]
name = davisinteractive
version = attr: davisinteractive.__version__
description = Evaluation Framework for DAVIS Interactive Segmentation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = segmentation
license = GPL v3
author = Alberto Montes
author-email = al.montes.gomez@gmail.com
home-page = https://github.com/albertomontesg/davis-interactive

[options]
packages = davisinteractive
zip_safe = True
include_package_data = True

[aliases]
test=pytest --cov=./

[yapf]
based_on_style=google
