[metadata]
name = davisinteractive
version = attr: davisinteractive.__version__
description = Evaluation Framework for DAVIS Interactive Segmentation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = segmentation
license = GPL v3
author = Alberto Montes
author-email = al.montes.gomez@gmail.com
home-page = https://github.com/albertomontesg/davis-interactive
classifiers = 
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering :: Human Machine Interfaces
        Topic :: Software Development :: Libraries
        Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = True
include_package_data = True
packages = find:

[options.package_data]
* = *.json

[bdist_wheel]
universal = 1

[aliases]
test=pytest --cov=./

[yapf]
based_on_style=google
